adicionado alguns projetos e ícones/estilização

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Ramon-Mateus</title>
 </head>
 <body>
     <nav>
@@ -12,16 +12,45 @@
     </nav>
     <body>
         <h1>Olá, meu nome é Ramon Mateus. <br/> Eu projeto, escrevo e desenvolvo aplicações web.</h1>
-        <section id="projetos">
+        <section class="projetos">
             <h2>Meus projetos</h2>
             <div class="proj1">
                 <div class="SaleSync projs">
-                    <img src="img/SaleSyncAPI.png" alt="Documentação da API SaleSync" width="500" height="300" class="projeto_image">
-                    <p>API construída em C# (Aspnet) de um sistema de leilão</p>
+                    <h2>API: Sistema de leilão</h2>
+                    <div class="badges">
+                        <img class="badge" src="https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=c-sharp&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/.NET-5C2D91?style=for-the-badge&logo=.net&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/SQLite-07405E?style=for-the-badge&logo=sqlite&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/Visual_Studio-5C2D91?style=for-the-badge&logo=visual%20studio&logoColor=white" />
+                    </div>
+                    <figure>
+                        <img src="img/SaleSyncAPI.png" alt="Documentação da API SaleSync" width="500" height="300" class="projeto_image">
+                        <figcaption>API construída em C# (Aspnet) de um sistema de leilão</figcaption>
+                    </figure>
+                    <a href="https://github.com/Ramon-Mateus/SaleSync">
+                        <div class="link_proj">
+                            <img src="img/icons8-github(1).svg" />
+                            <p>Repositório</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="attendance projs">
-                    <img src="img/attendance.png" alt="Plugin do Moodle para gerenciamento de presença" width="500" height="300" class="projeto_image">
-                    <p>Plugin do Moodle para gerenciamento de presença</p>
+                    <h2>Plugin gerenciamento de presenças</h2>
+                    <div class="badges">
+                        <img class="badge" src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/MySQL-005C84?style=for-the-badge&logo=mysql&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white" />
+                    </div>
+                    <figure>
+                        <img src="img/attendance.png" alt="Plugin do Moodle para gerenciamento de presença" width="500" height="300" class="projeto_image">
+                        <figcaption>Plugin do Moodle para gerenciamento de presença</figcaption>
+                    </figure>
+                    <a href="https://github.com/cte-zl-ifrn/moodle__block_suapattendance">
+                        <div class="link_proj">
+                            <img src="img/icons8-github(1).svg" />
+                            <p>Repositório</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
