Adicionado mais projetos e ícones/badges

--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
     <nav>
         <p id="port">Ramon-Mateus.</p>
     </nav>
-    <body>
         <h1>Olá, meu nome é Ramon Mateus. <br/> Eu projeto, escrevo e desenvolvo aplicações web.</h1>
+        <div class="icons_group_title">
+            <a href="https://github.com/Ramon-Mateus">
+                <div class="link_proj icons_title">
+                    <img src="img/icons8-github.svg" />
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/in/ramon-oliveira-673871230/">
+                <div class="link_proj icons_title linkedin">
+                    <img src="img/icons8-linkedin.svg" />
+                </div>
+            </a>
+        </div>
         <section class="projetos">
             <h2>Meus projetos</h2>
             <div class="proj1">
@@ -29,13 +40,13 @@
                     </figure>
                     <a href="https://github.com/Ramon-Mateus/SaleSync">
                         <div class="link_proj">
-                            <img src="img/icons8-github(1).svg" />
+                            <img src="img/icons8-github.svg" />
                             <p>Repositório</p>
                         </div>
                     </a>
                 </div>
-                <div class="attendance projs">
-                    <h2>Plugin gerenciamento de presenças</h2>
+                <div class="projs">
+                    <h2>Moodle plugin: Suap attendance</h2>
                     <div class="badges">
                         <img class="badge" src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white" />
                         <img class="badge" src="https://img.shields.io/badge/MySQL-005C84?style=for-the-badge&logo=mysql&logoColor=white" />
@@ -45,15 +56,48 @@
                         <img src="img/attendance.png" alt="Plugin do Moodle para gerenciamento de presença" width="500" height="300" class="projeto_image">
                         <figcaption>Plugin do Moodle para gerenciamento de presença</figcaption>
                     </figure>
-                    <a href="https://github.com/cte-zl-ifrn/moodle__block_suapattendance">
+                    <a href="https://github.com/Ramon-Mateus/moodle__block_suapattendance">
                         <div class="link_proj">
-                            <img src="img/icons8-github(1).svg" />
+                            <img src="img/icons8-github.svg" />
+                            <p>Repositório</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="proj2">
+                <div class="SaleSync projs">
+                    <h2>GeoProject</h2>
+                    <div class="badges">
+                        <img class="badge" src="https://img.shields.io/badge/Unity-100000?style=for-the-badge&logo=unity&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=c-sharp&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/.NET-5C2D91?style=for-the-badge&logo=.net&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/blender-%23F5792A.svg?style=for-the-badge&logo=blender&logoColor=white" />
+                    </div>
+                    <figure>
+                        <img src="img/GeoProject.jpeg" alt="Projeto em VR" width="500" height="300" class="projeto_image">
+                        <figcaption>Ambiente em realidade virtual para vizualização de objetos geológicos</figcaption>
+                    </figure>
+                    <p id='direitos'>Por razões de direitos autoraisn não posso compartilhar o código, <br /> mas planejo redigir um artigo sobre o projeto em breve.</p>
+                </div>
+                <div class="projs">
+                    <h2>Lyrics Lab</h2>
+                    <div class="badges">
+                        <img class="badge" src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/Prisma-3982CE?style=for-the-badge&logo=Prisma&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/SQLite-07405E?style=for-the-badge&logo=sqlite&logoColor=white" />
+                    </div>
+                    <figure>
+                        <img src="img/Lyrics_Lab_Api.png" alt="API do Lyrics Lab" width="500" height="300" class="projeto_image">
+                        <figcaption>API desenvolvida em Fastify de um sistema para compositores <br />amadores de letras e cifras</figcaption>
+                    </figure>
+                    <a href="https://github.com/Ramon-Mateus/lyrics-back-end">
+                        <div class="link_proj">
+                            <img src="img/icons8-github.svg" />
                             <p>Repositório</p>
                         </div>
                     </a>
                 </div>
             </div>
         </section>
-    </body>
 </body>
 </html>
