--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ramon-Mateus</title>
 </head>
 <body>
+    <div class="gradiente"></div>
     <nav>
         <p id="port">Ramon-Mateus.</p>
     </nav>
@@ -23,6 +24,12 @@
                 </div>
             </a>
         </div>
+        <a class='contate' onclick="copyToClipboard()">
+            <div class='botao'>
+                <img class="imgbutao" src="img/icons8-nova-mensagem-24.png" />
+                Contate-me
+            </div>
+        </a>
         <section class="projetos">
             <h2>Meus projetos</h2>
             <div class="proj1">
@@ -77,7 +84,7 @@
                         <img src="img/GeoProject.jpeg" alt="Projeto em VR" width="500" height="300" class="projeto_image">
                         <figcaption>Ambiente em realidade virtual para vizualização de objetos geológicos</figcaption>
                     </figure>
-                    <p id='direitos'>Por razões de direitos autoraisn não posso compartilhar o código, <br /> mas planejo redigir um artigo sobre o projeto em breve.</p>
+                    <p id='direitos'>Por razões de direitos autorais não posso compartilhar o código, <br /> mas planejo redigir um artigo sobre o projeto em breve.</p>
                 </div>
                 <div class="projs">
                     <h2>Lyrics Lab</h2>
@@ -99,5 +106,6 @@
                 </div>
             </div>
         </section>
+    <script src="clipboard.js"></script>
 </body>
 </html>
