feat: to-do and list_houses projects

--- a/index.html
+++ b/index.html
@@ -34,6 +34,46 @@
             <h2>Meus projetos</h2>
             <div class="proj1">
                 <div class="SaleSync projs">
+                    <h2>To Do: Aplicativo de tarefas</h2>
+                    <div class="badges">
+                        <img class="badge" src="https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=c-sharp&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/.NET-5C2D91?style=for-the-badge&logo=.net&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/SQLite-07405E?style=for-the-badge&logo=sqlite&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white" />
+                    </div>
+                    <figure>
+                        <img src="img/Todo.jpg" alt="Aplicativo de tarefas" width="500" height="300" class="projeto_image">
+                        <figcaption>Aplicativo monolítico (Aspnet) de gerenciamento de tarefas</figcaption>
+                    </figure>
+                    <a href="https://github.com/Ramon-Mateus/To-Do">
+                        <div class="link_proj">
+                            <img src="img/icons8-github.svg" />
+                            <p>Repositório</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="projs">
+                    <h2>Sistema de aluguel de casas</h2>
+                    <div class="badges">
+                        <img class="badge" src="https://img.shields.io/badge/Angular-DD0031?style=for-the-badge&logo=angular&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
+                        <img class="badge" src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=whites" />
+                    </div>
+                    <figure>
+                        <img src="img/home_list_houses.jpg" alt="Plugin do Moodle para gerenciamento de presença" width="500" height="300" class="projeto_image">
+                        <figcaption>Interface de um sistema de listagem de casas para alugar</figcaption>
+                    </figure>
+                    <a href="https://github.com/Ramon-Mateus/list_houses">
+                        <div class="link_proj">
+                            <img src="img/icons8-github.svg" />
+                            <p>Repositório</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="proj1">
+                <div class="SaleSync projs">
                     <h2>API: Sistema de leilão</h2>
                     <div class="badges">
                         <img class="badge" src="https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=c-sharp&logoColor=white" />
